Added acknowledgements,pagination for guide-detail,comment-list,guide-list

--- a/guides/templates/admin_comments.html
+++ b/guides/templates/admin_comments.html
@@ -6,20 +6,30 @@
 <h3 class="text-center text-lg-start ps-3">Delete Comments</h3>
 <div class="container-fluid">
     <div class="row col-12 col-md-10 mt-3 offset-md-2 ms-2">
-        <ul> 
+        <ul>
             <!-- Iterate over comments -->
-            
-            {% for comment in object_list %} 
+            {% for comment in page_obj %}
             <!-- Display comments list -->
-            <li class="pt-2"><a href="{% url 'delete-comment-list' comment.pk %}">Comment: {{ comment.body }}</a></li> 
+            <li class="pt-2"><a href="{% url 'delete-comment-list' comment.pk %}">Comment: {{ comment.body }}</a></li>
             <!-- if all comments deleted-->
-            {% empty %} 
+            {% empty %}
             <li>No comments avaliable.</li>
             {% endfor %}
         </ul>
-        <a class="btn btn-primary pb-2" href="{% url 'game' %}">Back</a> 
-
+        <a class="btn btn-primary pb-2" href="{% url 'game' %}">Back</a>
     </div>
+    <!--Next and previous buttons for pagination-->
+    <nav aria-label="Page navigation">
+        <ul class="pagination ps-2">
+            {% if page_obj.has_previous %}
+            <li>
+                <a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV</a>
+            </li>
+            {% endif %}
+            {% if page_obj.has_next %}
+            <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
+            {% endif %}
+        </ul>
 </div>
 
 
