--- a/guides/templates/guides_not_approved.html
+++ b/guides/templates/guides_not_approved.html
@@ -2,24 +2,41 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% block content %}
+
 <!--Guides not approved element -->
 <h3 class="text-center text-lg-start ps-3">Approve Guides</h3>
 <div class="container-fluid">
     <div class="row col-12 col-md-10 mt-3 offset-md-2 ms-2">
-        <ul> 
+        <ul>
             <!-- Iterate over guides not approved -->
-            
-            {% for guide in object_list %} 
+
+            {% for guide in page_obj %}
             <!-- Display guides awaiting approval -->
-            <li class="pb-2"><a href="{% url 'approve-guide' guide.pk %}">Title: {{ guide.title }}</a></li> 
+            <li class="pb-2"><a href="{% url 'approve-guide' guide.pk %}">Title: {{ guide.title }}</a></li>
             <!-- if all guides approved-->
-            {% empty %} 
+            {% empty %}
             <li class="pb-2">No Guides to approve.</li>
             {% endfor %}
         </ul>
-        <a class="btn btn-primary pb-2" href="{% url 'game' %}">Back</a> 
-
+        <a class="btn btn-primary pb-2" href="{% url 'game' %}">Back</a>
     </div>
+    
+    <!--Next and previous buttons for pagination-->
+    <nav aria-label="Page navigation">
+        <ul class="pagination ps-2">
+            {% if page_obj.has_previous %}
+            <li>
+                <a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV</a>
+            </li>
+            {% endif %}
+            {% if page_obj.has_next %}
+            <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
+            {% endif %}
+        </ul>
+    </nav>
+
+
+
 </div>
 
 
