--- a/guides/templates/admin_guides.html
+++ b/guides/templates/admin_guides.html
@@ -8,8 +8,7 @@
     <div class="row col-12 col-md-10 mt-3 offset-md-2 ms-2">
         <ul> 
             <!-- Iterate over guides -->
-            
-            {% for guide in object_list %} 
+            {% for guide in page_obj %} 
             <!-- Display guides awaiting deletion -->
             <li class="pt-2"><a href="{% url 'delete-guide-list' guide.pk %}">Title: {{ guide.title }}</a></li> 
             <!-- if all guides deleted-->
@@ -20,6 +19,19 @@
         <a class="btn btn-primary pb-2" href="{% url 'game' %}">Back</a> 
 
     </div>
+    <!--Next and previous buttons for pagination-->
+    <nav aria-label="Page navigation">
+        <ul class="pagination ps-2">
+            {% if page_obj.has_previous %}
+            <li>
+                <a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV</a>
+            </li>
+            {% endif %}
+            {% if page_obj.has_next %}
+            <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
+            {% endif %}
+        </ul>
+    </nav>
 </div>
 
 
