--- a/category/templates/game_detail.html
+++ b/category/templates/game_detail.html
@@ -77,7 +77,7 @@
 </div>
     <!--Next and previous buttons for pagination-->
     <nav aria-label="Page navigation">
-        <ul class="pagination justify-content-center">
+        <ul class="pagination justify-content-center pt-2">
             {% if page_obj.has_previous %}
             <li>
                 <a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV</a>
