--- a/guides/templates/trophy_detail.html
+++ b/guides/templates/trophy_detail.html
@@ -102,7 +102,7 @@
         
         <!--Next and previous buttons for pagination-->
         <nav aria-label="Page navigation">
-            <ul class="pagination justify-content-center">
+            <ul class="pagination justify-content-center pt-3">
                 {% if page_obj.has_previous %}
                 <li>
                     <a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV</a>
