--- a/trophy_hunter/templates/trophy_hunter/index.html
+++ b/trophy_hunter/templates/trophy_hunter/index.html
@@ -37,7 +37,7 @@
         </div>
 
         <div class="category-button">
-            <a href="{% url 'game' %}" class="btn btn-primary">Categories</a>
+            <a href="{% url 'game' %}" class="btn btn-primary">Games</a>
         </div>
         {% else %}
         <div class="row">
