--- a/static/css/style.css
+++ b/static/css/style.css
@@ -75,16 +75,18 @@ a {
 
 select {
     width: 200px;
-    height: 20px;
+    height: 25px;
     margin-left: 12px;
+    border: solid #d3d3d3;
 }
 
 /* input styling for form elements */
 
 input {
     width: 200px;
-    height: 20px;
+    height: 25px;
     margin-left: 12px;
+    border: solid #d3d3d3;
 }
 
 input[type="checkbox"] {
@@ -186,10 +188,12 @@ img {
 
 .creation-form input {
     height: 35px;
+    margin: 0;
 }
 
 .creation-form select {
     height: 35px;
+    margin: 0;
 }
 
 /* Guide element styling */
