--- a/guides/templates/trophy_detail.html
+++ b/guides/templates/trophy_detail.html
@@ -99,7 +99,7 @@
         {% endif %}
 
         {% endif %}
-        
+
         <!--Next and previous buttons for pagination-->
         <nav aria-label="Page navigation">
             <ul class="pagination justify-content-center pt-3">
@@ -135,7 +135,8 @@
             </div>
         </div>
 
-        
-        
+
+
     </div>
-    {% endblock %}
+</div>
+{% endblock %}
